--- a/SQL_EDA.ipynb
+++ b/SQL_EDA.ipynb
@@ -92,11 +92,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.11/site-packages (0.5.0)\n",
-      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (3.10.2)\n",
+      "Collecting ipython-sql\n",
+      "  Downloading ipython_sql-0.5.0-py3-none-any.whl.metadata (17 kB)\n",
+      "Collecting prettytable (from ipython-sql)\n",
+      "  Downloading prettytable-3.10.2-py3-none-any.whl.metadata (30 kB)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (8.22.2)\n",
       "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (2.0.30)\n",
-      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.5.1)\n",
+      "Collecting sqlparse (from ipython-sql)\n",
+      "  Downloading sqlparse-0.5.1-py3-none-any.whl.metadata (3.9 kB)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (1.16.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.2.0)\n",
       "Requirement already satisfied: typing-extensions>=4.6.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy>=2.0->ipython-sql) (4.11.0)\n",
@@ -114,7 +117,13 @@
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.11/site-packages (from pexpect>4.3->ipython->ipython-sql) (0.7.0)\n",
       "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.0.1)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.4.1)\n",
-      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n"
+      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
+      "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
+      "Downloading prettytable-3.10.2-py3-none-any.whl (28 kB)\n",
+      "Downloading sqlparse-0.5.1-py3-none-any.whl (44 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.2/44.2 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: sqlparse, prettytable, ipython-sql\n",
+      "Successfully installed ipython-sql-0.5.0 prettytable-3.10.2 sqlparse-0.5.1\n"
      ]
     }
    ],
@@ -2426,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2446,6 +2455,7 @@
        "            <th>month</th>\n",
        "            <th>Booster_Version</th>\n",
        "            <th>Launch_Site</th>\n",
+       "            <th>Landing_Outcome</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -2453,21 +2463,22 @@
        "            <td>6</td>\n",
        "            <td>F9 v1.1 B1018</td>\n",
        "            <td>CCAFS LC-40</td>\n",
+       "            <td>Precluded (drone ship)</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(6, 'F9 v1.1 B1018', 'CCAFS LC-40')]"
+       "[(6, 'F9 v1.1 B1018', 'CCAFS LC-40', 'Precluded (drone ship)')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT month, Booster_Version, Launch_Site FROM SPACEXTBL WHERE (year = '2015' AND Landing_Outcome LIKE '%drone ship%' AND Mission_Outcome LIKE '%Failure%');"
+    "%sql SELECT Month, Booster_Version, Launch_Site, Landing_Outcome FROM SPACEXTBL WHERE (year = '2015' AND Landing_Outcome LIKE '%drone ship%' AND Mission_Outcome LIKE '%Failure%');"
    ]
   },
   {
@@ -2484,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2501,40 +2512,49 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
+       "            <th>Date</th>\n",
        "            <th>Landing_Outcome</th>\n",
        "            <th>Total_Count</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
+       "            <td>2012-05-22</td>\n",
        "            <td>No attempt</td>\n",
        "            <td>10</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2016-04-08</td>\n",
        "            <td>Success (drone ship)</td>\n",
        "            <td>5</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2015-01-10</td>\n",
        "            <td>Failure (drone ship)</td>\n",
        "            <td>5</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2015-12-22</td>\n",
        "            <td>Success (ground pad)</td>\n",
        "            <td>3</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2014-04-18</td>\n",
        "            <td>Controlled (ocean)</td>\n",
        "            <td>3</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2013-09-29</td>\n",
        "            <td>Uncontrolled (ocean)</td>\n",
        "            <td>2</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2010-06-04</td>\n",
        "            <td>Failure (parachute)</td>\n",
        "            <td>2</td>\n",
        "        </tr>\n",
        "        <tr>\n",
+       "            <td>2015-06-28</td>\n",
        "            <td>Precluded (drone ship)</td>\n",
        "            <td>1</td>\n",
        "        </tr>\n",
@@ -2542,23 +2562,23 @@
        "</table>"
       ],
       "text/plain": [
-       "[('No attempt', 10),\n",
-       " ('Success (drone ship)', 5),\n",
-       " ('Failure (drone ship)', 5),\n",
-       " ('Success (ground pad)', 3),\n",
-       " ('Controlled (ocean)', 3),\n",
-       " ('Uncontrolled (ocean)', 2),\n",
-       " ('Failure (parachute)', 2),\n",
-       " ('Precluded (drone ship)', 1)]"
+       "[('2012-05-22', 'No attempt', 10),\n",
+       " ('2016-04-08', 'Success (drone ship)', 5),\n",
+       " ('2015-01-10', 'Failure (drone ship)', 5),\n",
+       " ('2015-12-22', 'Success (ground pad)', 3),\n",
+       " ('2014-04-18', 'Controlled (ocean)', 3),\n",
+       " ('2013-09-29', 'Uncontrolled (ocean)', 2),\n",
+       " ('2010-06-04', 'Failure (parachute)', 2),\n",
+       " ('2015-06-28', 'Precluded (drone ship)', 1)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT Landing_Outcome, COUNT(*) AS Total_Count FROM SPACEXTBL WHERE Date BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY Landing_Outcome ORDER BY Total_Count DESC;"
+    "%sql SELECT Date, Landing_Outcome, COUNT(*) AS Total_Count FROM SPACEXTBL WHERE Date BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY Landing_Outcome ORDER BY Total_Count DESC;"
    ]
   },
   {
